<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/imgMoonNotesItemIcon"
        android:layout_width="@dimen/principleItemHeight"
        android:layout_height="@dimen/principleItemHeight"
        android:background="@color/contentViewBackground"
        android:contentDescription="@string/principleItemIconDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_drop_down" />

    <TextView
        android:id="@+id/txtMoonNotesDate"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/principleItemHeight"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
        android:text="@string/date_format"
        android:textAppearance="?android:attr/textAppearanceListItemSmall"
        app:layout_constraintStart_toEndOf="@id/imgMoonNotesItemIcon"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/txtMoonNotesTitle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/principleItemHeight"
        android:gravity="center_vertical"
        android:hint="@string/moon_change"
        android:inputType="text"
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
        android:text="@string/moon_change_format"
        android:textAppearance="?android:attr/textAppearanceListItemSmall"
        app:layout_constraintStart_toEndOf="@id/txtMoonNotesDate"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,RtlSymmetry" />

    <LinearLayout
        android:id="@+id/moonNotesContentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgMoonNotesItemIcon">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/txtMoonNotesInner"
                android:text="@string/moonNotesInnerContent" />

            <EditText
                android:id="@+id/txtMoonNotesInner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                tools:ignore="Autofill" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/txtMoonNotesOuter"
                android:text="@string/moonNotesOuterContent" />

            <EditText
                android:id="@+id/txtMoonNotesOuter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                tools:ignore="Autofill" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>